// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BottomNavigation — visual baseline active route = history renders history as active 1`] = `
<view
  ref={null}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderTopLeftRadius": 24,
      "borderTopRightRadius": 24,
      "bottom": 0,
      "elevation": 8,
      "flexDirection": "row",
      "left": 0,
      "paddingBottom": 20,
      "paddingTop": 12,
      "position": "absolute",
      "right": 0,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": -4,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 12,
    }
  }
>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#9CA3AF"
      name="home-outline"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          false,
        ]
      }
    >
      Home
    </text>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#10B981"
      name="swap-horizontal"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          {
            "color": "#10B981",
            "fontWeight": "600",
          },
        ]
      }
    >
      Transactions
    </text>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <view
      ref={null}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#10B981",
          "borderRadius": 28,
          "elevation": 4,
          "height": 56,
          "justifyContent": "center",
          "marginTop": -28,
          "shadowColor": "#10B981",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 8,
          "width": 56,
        }
      }
    >
      <Ionicons
        color="#fff"
        name="add"
        size={28}
      />
    </view>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#9CA3AF"
      name="bar-chart-outline"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          false,
        ]
      }
    >
      Analytics
    </text>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#9CA3AF"
      name="person-outline"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          false,
        ]
      }
    >
      Profile
    </text>
  </touchable>
</view>
`;

exports[`BottomNavigation — visual baseline active route = home renders home as active 1`] = `
<view
  ref={null}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderTopLeftRadius": 24,
      "borderTopRightRadius": 24,
      "bottom": 0,
      "elevation": 8,
      "flexDirection": "row",
      "left": 0,
      "paddingBottom": 20,
      "paddingTop": 12,
      "position": "absolute",
      "right": 0,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": -4,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 12,
    }
  }
>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#10B981"
      name="home"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          {
            "color": "#10B981",
            "fontWeight": "600",
          },
        ]
      }
    >
      Home
    </text>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#9CA3AF"
      name="swap-horizontal-outline"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          false,
        ]
      }
    >
      Transactions
    </text>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <view
      ref={null}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#10B981",
          "borderRadius": 28,
          "elevation": 4,
          "height": 56,
          "justifyContent": "center",
          "marginTop": -28,
          "shadowColor": "#10B981",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 8,
          "width": 56,
        }
      }
    >
      <Ionicons
        color="#fff"
        name="add"
        size={28}
      />
    </view>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#9CA3AF"
      name="bar-chart-outline"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          false,
        ]
      }
    >
      Analytics
    </text>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#9CA3AF"
      name="person-outline"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          false,
        ]
      }
    >
      Profile
    </text>
  </touchable>
</view>
`;

exports[`BottomNavigation — visual baseline active route = insights renders insights as active 1`] = `
<view
  ref={null}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderTopLeftRadius": 24,
      "borderTopRightRadius": 24,
      "bottom": 0,
      "elevation": 8,
      "flexDirection": "row",
      "left": 0,
      "paddingBottom": 20,
      "paddingTop": 12,
      "position": "absolute",
      "right": 0,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": -4,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 12,
    }
  }
>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#9CA3AF"
      name="home-outline"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          false,
        ]
      }
    >
      Home
    </text>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#9CA3AF"
      name="swap-horizontal-outline"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          false,
        ]
      }
    >
      Transactions
    </text>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <view
      ref={null}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#10B981",
          "borderRadius": 28,
          "elevation": 4,
          "height": 56,
          "justifyContent": "center",
          "marginTop": -28,
          "shadowColor": "#10B981",
          "shadowOffset": {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 8,
          "width": 56,
        }
      }
    >
      <Ionicons
        color="#fff"
        name="add"
        size={28}
      />
    </view>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#10B981"
      name="bar-chart"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          {
            "color": "#10B981",
            "fontWeight": "600",
          },
        ]
      }
    >
      Analytics
    </text>
  </touchable>
  <touchable
    onPress={[Function]}
    ref={null}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
  >
    <Ionicons
      color="#9CA3AF"
      name="person-outline"
      size={24}
    />
    <text
      ref={null}
      style={
        [
          {
            "color": "#9CA3AF",
            "fontSize": 10,
            "marginTop": 4,
          },
          false,
        ]
      }
    >
      Profile
    </text>
  </touchable>
</view>
`;
